# Ray_Tracing_Project

./: .clang-format  .gitignore  CMakeLists.txt  GUI.cpp  Makefile  Project.cc  README.md  Vec3.h  main.cpp
GUI/include/: BRDFItemDialog.h  BRDFItemTree.h  BottomPanel.h  FileBar.h  ItemTree.h  OpenGLView.h  SidePanel.h  StatusBar.h  View.h
GUI/src/: BRDFItemTree.cpp  BottomPanel.cpp  FileBar.cpp  ItemTree.cpp  OpenGLView.cpp  SidePanel.cpp  StatusBar.cpp  View.cpp
Headers/: Image.h  Ray.h
LaTeX_Report_Files/: Report.tex
Materials/code/: header_tests.cpp
Output/: Create_Figures.m  plot_compare_variances.m  plot_expected_answer.m  plot_rr_variance.m  plot_variance.m
include/: BRDF.h  GUI.h  Image.h  Observer.h  PhysicalObject.h  Ray.h  RayTracingProject.h  SDF.h  SceneRender.h  Vec3.h  header_tests.cc  main.h  stb_image_write.h
include/GUI/: BottomPanel.h  FileBar.h  SidePanel.h  StatusBar.h  View.h
